changes from SOPs changes

--- a/caravel/conf/ensemble-videoraw_rawdata.conf
+++ b/caravel/conf/ensemble-videoraw_rawdata.conf
@@ -8,7 +8,7 @@
         },
         {
             "name": "session",
-            "pattern": "ses-(term)",
+            "pattern": "ses-m([0-9]+)",
             "directory": "{subject}/{session}"
         },
         {
